syntax = "proto3";

package proto;

option go_package = "www.velocidex.com/golang/velociraptor/api/proto";

message ServerInstallRecord {
    uint64 install_time = 1;
}